# VoxelCarving

./: CMakeCache.txt  CMakeLists.txt  Calibration.cpp  CameraCalibration  CameraCalibration.vcxproj  CameraCalibration.vcxproj.filters  CameraGlobalPos.cpp  Camera_calb.cpp  ComponentSelection.cpp  ElementWise.cpp  HelloWorld2.cpp  Makefile  README.md  ReadMe.txt  VoxelCarving.cpp  camera.yml  cmake_install.cmake  silhouette.cpp  stdafx.cpp  temp.yml  test.yml
Debug/: CameraCalibration.pch  vc120.idb
Debug/CameraCa.234600C6.tlog/: CL.read.1.tlog  CL.write.1.tlog  CameraCalibration.lastbuildstate  cl.command.1.tlog
Release/: CameraCalibration.pch
Release/CameraCa.234600C6.tlog/: CL.read.1.tlog  CL.write.1.tlog  CameraCalibration.lastbuildstate  cl.command.1.tlog
x64/Debug/: CameraCalibration.pch  vc120.idb
x64/Debug/CameraCa.234600C6.tlog/: CL.read.1.tlog  CL.write.1.tlog  CameraCalibration.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
